[package]
name = "anaso_components_stela"
version = "0.0.1"
description = "Components for Ana.so's Stela API"
license = "MIT OR Apache-2.0"
authors = ["Brandon Dyer <brandono@ana.so>"]
repository = "https://github.com/Anaso-Internacia/anaso_components_stela"
edition = "2021"

[dependencies]
anaso_site_api_models = "0.0.7"
async-trait = "0.1"
js-sys = "0.3"
leptos = "0.6"
leptos_router = "0.6"
serde = "1"
serde_qs = "0.13"
urlencoding = "2"
wasm-bindgen-futures = "0.4"

[dependencies.phosphor-leptos]
version = "0.6"
default-features = false
features = [
  "communication",
  "editor",
  "map",
  "nature",
  "office",
  "people",
  "system",
]

[dependencies.web-sys]
version = "0.3"
features = ["Navigator", "ShareData"]
