[package]
name = "anaso_components_stela"
version = "0.0.7"
description = "Components for Ana.so's Stela API"
license = "MIT OR Apache-2.0"
authors = ["Brandon Dyer <brandono@ana.so>"]
repository = "https://github.com/Anaso-Internacia/anaso_components_stela"
edition = "2021"

[dependencies]
anaso_site_api_models = "0.0.12"
async-trait = "0.1"
js-sys = "0.3"
leptos = "0.7"
leptos_meta = "0.7"
leptos_router = "0.7"
serde = "1"
serde_qs = "0.13"
server_fn = { version = "0.7", features = ["multipart", "browser"] }
urlencoding = "2"
wasm-bindgen-futures = "0.4"

[dependencies.phosphor-leptos]
version = "0.7"
default-features = false
features = [
  "communication",
  "editor",
  "map",
  "nature",
  "office",
  "people",
  "system",
]

[dependencies.web-sys]
version = "0.3"
features = ["Navigator", "ShareData"]
